Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -162,10 +162,11 @@
             <p>Welcome to my website!</p>
         </div>
         <div id="CATnGUN">
-            <img src="https://i.postimg.cc/g0tstt1m/GUN.png" id="TOP2">
-            <img src="https://i.postimg.cc/ZqsHssXT/CAT.png" id="TOP1">
+            <img src="https://imgur.com/sSFWKqq" id="TOP2">
+            <img src="https://imgur.com/OrXp8hO" id="TOP1">
         </div>
     </div>
 
 </body>
 </html>
+
