Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -162,11 +162,12 @@
             <p>Welcome to my website!</p>
         </div>
         <div id="CATnGUN">
-            <img src="https://imgur.com/sSFWKqq" id="TOP2">
-            <img src="https://imgur.com/OrXp8hO" id="TOP1">
+            <img src="https://i.imgur.com/sSFWKqq.png" id="TOP2">
+            <img src="https://i.imgur.com/OrXp8hO.png" id="TOP1">
         </div>
     </div>
 
 </body>
 </html>
+
 
