Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
        
     </div>
 </div>
-<hr>
+<br>
+
+<div class="tips-text"><p>Tips: Hover over the whole status section to see the phase 2. Tap the content on mobile.</p></div>
+
 <div id="xyrxnz-section">
     <div class="xythe-title"><h2>Xyrxnz</h2></div>
-    <div class="tips-text"><p>Tips: Hover over the whole status section to see the phase 2. Tap the content on mobile.</p></div>
    
     <div class="status-container" id="xyrxnz-status-container">
         <div class="image-container" id="xyrxnz-image-container">
@@ -64,8 +66,8 @@
         <div class="stats-panel" id="xyrxnz-stats-panel">
             <div class="phase1">
                 <h2 class="subtitle">[ BESTIARY ENTRY:<span id="unique-id"> 001 </span>]</h2><br>
-                <h3>PHASE 1: Xyrxnz [GUN DEVIL COSPLAY]</h3><br>
-                <p><b>NAME</b>: Xyrxnz Xythe</p>
+                <h3>PHASE 1: Xyron [GUN DEVIL COSPLAY]</h3><br>
+                <p><b>NAME</b>: Xyron Xythe</p>
                 <p><b>Level</b>: 500</p>
                 <p><b>CLASS</b>: Bullet of Calamity / World-Eater ( LIMITED TO THIS USER)</p>
                 <p><b>RACE</b>: Devil - Primordial Fear ( UNIQUE )</p>
@@ -88,7 +90,7 @@
             </div>
 
             <div class="phase2">
-                <h2 class="subtitle2">[ BESTIARY ENTRY:<span style="color:rgb(233, 233, 233);"> 002 </span>]</h2><br>
+                <h2 class="subtitle2">[ BESTIARY ENTRY:<span style="color:rgb(255, 255, 255);"> 002 </span>]</h2><br>
                 <h3>PHASE 2: Diddy [GUN DEVIL EDITION]</h3><br>
                 <p><b>NAME</b>: Null</p>
                 <p><b>Level</b>: Error</p>
@@ -116,21 +118,20 @@
 </div>
 <hr>
 <div id="gop-section">
-    <div class="xythe-title">
+    <div class="gop-title">
         <h2>GOP</h2>
     </div>
-   
     
-    <div class="status-container" id="gop-status-container">
-        <div class="image-container" id="gop-image-container">
-            <img src="images/GOP1.png" class="pose pose1">
-            <img src="images/GOP2.png" class="pose pose2">
-            <img src="images/GOP3.png" class="splash-bg">
+    <div class="gop-status-container">
+        <div class="gop-image-container">
+            <img src="images/GOP1.png" class="gop-pose gop-pose1">
+            <img src="images/GOP2.png" class="gop-pose gop-pose2">
+            <img src="images/GOP3.png" class="gop-splash-bg">
         </div>
 
-        <div class="stats-panel" id="gop-stats-panel">
-            <div class="phase1">
-                <h2>[ BESTIARY ENTRY:<span id="unique-id"> 003 </span>]</h2>
+        <div class="gop-stats-panel">
+            <div class="gop-phase1">
+                <h2>[ BESTIARY ENTRY:<span id="gop-unique-id"> 003 </span>]</h2>
                 <h3>PHASE 1: Gopio</h3><br>
                 <p><b>NAME</b>: Gopio</p>
                 <p><b>Level</b>: 2</p>
@@ -147,34 +148,34 @@
                 <p><b>Description</b>: While one eye stays locked on the target, the other scans the horizon independently. Gopio is immune to flank attacks and gains a +20% bonus to detecting hidden traps.</p>
                 <br><hr>
                 <br><br>
-                <p class="description">"He can see everything, even the things that are not there."</p>
+                <p class="gop-description">"He can see everything, even the things that are not there."</p>
                 <br><br><hr><br>
             </div>
 
-            <div class="phase2">
+            <div class="gop-phase2">
                 <p>ERROR ERROR ERROR</p>
                 <h2>[ BESTIARY ENTRY:<span style="color: black;"> 004 </span>]</h2>
-                <h3>PHASE 2: Gopio [GOP EDITION]</h3><br>
-                <p><b>NAME</b>: GOP ( ERROR ERROR ERROR ERROR ERROR ERROR )</p>
+                <h3>PHASE 2: Gopio [GOP EDITION]</h3><br><p><b>ERROR /</b></p>
+                <p><b>NAME</b>: GOP ( ERROR ERROR ERROR ERROR ERROR ERROR )</p><p><b>ERROR /</b></p>
                 <p><b>SYSTEM ERROR</b>: ???</p>
                 <p><b>CLASS</b>: Unknown </p>
+                <p><b>ERROR /</b></p><p><b>ERROR /</b></p>
                 <p><b>RACE</b>: Unknown</p><br>
                 <h2>CORE ATTRIBUTES</h2><br>
-                <p><b>ATK</b>: ???</p>
+                <p><b>ATK</b>: ???</p><p><b>ERROR /</b></p>
                 <p><b>AGI</b>: SYSTEM ERROR</p>
                 <p><b>ERROR</b>: Error</p>
-                <p><b>STA</b>: inf</p>
+                <p><b>STA</b>: inf</p><p><b>ERROR /</b></p>
                 <p><b>DEF</b>:Error</p><br>
-                <h2>UNIQUE ABILITY</h2><br>
-                <h3>ERROR ( ??? )</h3><br>
-                <p><b>Description</b>: SYSTEM CAN NOT IDENTIFY</p>
-                <br><hr><br>
+                <h2>UNIQUE ABILITY</h2><br><p><b>ERROR /</b></p>
+                <h3>ERROR ( ??? )</h3><br><p><b>ERROR /</b></p>
+                <p><b>Description</b>: SYSTEM CAN NOT IDENTIFY</p><p><b>ERROR /</b></p>
+                <br><hr><br><p><b>ERROR /</b></p>
                 <p>ERROR. ERROR.</p>
                 <br><hr>
             </div>
         </div>
     </div>
-
 </div>
 </body>
 </html>
