Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div class="tips-text"><p>Tips: Hover over the whole status section to see the phase 2. Tap the content on mobile.</p></div>
 
 <div id="xyrxnz-section">
-    <div class="xythe-title"><h2>Xyrxnz</h2></div>
+    <div class="xythe-title"><h2>Xyron</h2></div>
    
     <div class="status-container" id="xyrxnz-status-container">
         <div class="image-container" id="xyrxnz-image-container">
@@ -179,3 +179,4 @@
 </div>
 </body>
 </html>
+
